--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
 /*  your css code here. If applicable */
+body{
+	background-color:rgb(204, 204, 204);
+}
+#playlist>ul>li{list-style-type:none;}
+a{text-decoration-line:none;}
